LPS-99164 Adapt testProcessFragmentEntryLinkHTMLWithConfiguration to verify checkbox fields are processed correctly

--- a/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-freemarker-test/src/testIntegration/resources/com/liferay/fragment/entry/processor/freemarker/test/dependencies/expected_processed_fragment_entry_with_configuration.html
+++ b/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-freemarker-test/src/testIntegration/resources/com/liferay/fragment/entry/processor/freemarker/test/dependencies/expected_processed_fragment_entry_with_configuration.html
@@ -12,12 +12,16 @@ This is editable text
 	<th>Value</th>
 	<th>is_string</th>
 	<th>is_number</th>
+	<th>is_boolean</th>
 </tr>
 <tr>
 	<td>configuration.headingAppliedStyle</td>
 	<td>dark</td>
 	<td>
 		true
+	</td>
+	<td>
+		false
 	</td>
 	<td>
 		false
@@ -32,6 +36,9 @@ This is editable text
 	<td>
 		false
 	</td>
+	<td>
+		false
+	</td>
 </tr>
 <tr>
 	<td>configuration.bodyNumberOfColumns</td>
@@ -42,10 +49,55 @@ This is editable text
 	<td>
 		true
 	</td>
+	<td>
+		false
+	</td>
 </tr>
 <tr>
 	<td>configuration.bodyTableWidth</td>
 	<td>1.1</td>
+	<td>
+		false
+	</td>
+	<td>
+		true
+	</td>
+	<td>
+		false
+	</td>
+</tr>
+<tr>
+	<td>configuration.bodyHideBody</td>
+	<td>false</td>
+	<td>
+		false
+	</td>
+	<td>
+		false
+	</td>
+	<td>
+		true
+	</td>
+</tr>
+<tr>
+	<td>configuration.bodyHideTitle</td>
+	<td>true</td>
+	<td>
+		false
+	</td>
+	<td>
+		false
+	</td>
+	<td>
+		true
+	</td>
+</tr>
+<tr>
+	<td>configuration.bodyHideSubtitle</td>
+	<td>true</td>
+	<td>
+		false
+	</td>
 	<td>
 		false
 	</td>
