LPS-99162 Adapt testProcessFragmentEntryLinkHTMLWithConfiguration to verify text fields are processed correctly

--- a/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-freemarker-test/src/testIntegration/resources/com/liferay/fragment/entry/processor/freemarker/test/dependencies/fragment_entry_with_configuration.html
+++ b/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-freemarker-test/src/testIntegration/resources/com/liferay/fragment/entry/processor/freemarker/test/dependencies/fragment_entry_with_configuration.html
@@ -191,6 +191,106 @@ This is editable text
 	  [/#if]
 	</td>
 </tr>
+<tr>
+	<td>configuration.buttonTextDefault</td>
+	<td>${configuration.buttonTextDefault}</td>
+	<td>
+	  [#if configuration.buttonTextDefault?is_string]
+		true
+	  [#else]
+		false
+	  [/#if]
+	</td>
+	<td>
+	  [#if configuration.buttonTextDefault?is_number]
+		true
+	  [#else]
+		false
+	  [/#if]
+	</td>
+	<td>
+	  [#if configuration.buttonTextDefault?is_boolean]
+		true
+	  [#else]
+		false
+	  [/#if]
+	</td>
+</tr>
+<tr>
+	<td>configuration.buttonTextString</td>
+	<td>${configuration.buttonTextString}</td>
+	<td>
+	  [#if configuration.buttonTextString?is_string]
+		true
+	  [#else]
+		false
+	  [/#if]
+	</td>
+	<td>
+	  [#if configuration.buttonTextString?is_number]
+		true
+	  [#else]
+		false
+	  [/#if]
+	</td>
+	<td>
+	  [#if configuration.buttonTextString?is_boolean]
+		true
+	  [#else]
+		false
+	  [/#if]
+	</td>
+</tr>
+<tr>
+	<td>configuration.buttonTextInt</td>
+	<td>${configuration.buttonTextInt}</td>
+	<td>
+	  [#if configuration.buttonTextInt?is_string]
+		true
+	  [#else]
+		false
+	  [/#if]
+	</td>
+	<td>
+	  [#if configuration.buttonTextInt?is_number]
+		true
+	  [#else]
+		false
+	  [/#if]
+	</td>
+	<td>
+	  [#if configuration.buttonTextInt?is_boolean]
+		true
+	  [#else]
+		false
+	  [/#if]
+	</td>
+</tr>
+<tr>
+	<td>configuration.buttonTextDouble</td>
+	<td>${configuration.buttonTextDouble}</td>
+	<td>
+	  [#if configuration.buttonTextDouble?is_string]
+		true
+	  [#else]
+		false
+	  [/#if]
+	</td>
+	<td>
+	  [#if configuration.buttonTextDouble?is_number]
+		true
+	  [#else]
+		false
+	  [/#if]
+	</td>
+	<td>
+	  [#if configuration.buttonTextDouble?is_boolean]
+		true
+	  [#else]
+		false
+	  [/#if]
+	</td>
+</tr>
 </table>
 
 </div>
