--- a/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-freemarker-test/src/testIntegration/resources/com/liferay/fragment/entry/processor/freemarker/test/dependencies/expected_processed_fragment_entry_with_configuration.html
+++ b/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-freemarker-test/src/testIntegration/resources/com/liferay/fragment/entry/processor/freemarker/test/dependencies/expected_processed_fragment_entry_with_configuration.html
@@ -105,6 +105,58 @@ This is editable text
 		true
 	</td>
 </tr>
+<tr>
+	<td>configuration.buttonTextDefault</td>
+	<td></td>
+	<td>
+		true
+	</td>
+	<td>
+		false
+	</td>
+	<td>
+		false
+	</td>
+</tr>
+<tr>
+	<td>configuration.buttonTextString</td>
+	<td>Default Text String</td>
+	<td>
+		true
+	</td>
+	<td>
+		false
+	</td>
+	<td>
+		false
+	</td>
+</tr>
+<tr>
+	<td>configuration.buttonTextInt</td>
+	<td>1</td>
+	<td>
+		false
+	</td>
+	<td>
+		true
+	</td>
+	<td>
+		false
+	</td>
+</tr>
+<tr>
+	<td>configuration.buttonTextDouble</td>
+	<td>1.1</td>
+	<td>
+		false
+	</td>
+	<td>
+		true
+	</td>
+	<td>
+		false
+	</td>
+</tr>
 </tbody></table>
 
 </div>
