LPS-99162 Adapt testProcessFragmentEntryLinkHTMLWithConfigurationNondefaultSegmentId to verify text fields are processed correctly

--- a/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-freemarker-test/src/testIntegration/resources/com/liferay/fragment/entry/processor/freemarker/test/dependencies/expected_processed_fragment_entry_with_configuration_nondefault_segment_id.html
+++ b/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-freemarker-test/src/testIntegration/resources/com/liferay/fragment/entry/processor/freemarker/test/dependencies/expected_processed_fragment_entry_with_configuration_nondefault_segment_id.html
@@ -105,6 +105,58 @@ This is editable text
 		true
 	</td>
 </tr>
+<tr>
+	<td>configuration.buttonTextDefault</td>
+	<td>Non default</td>
+	<td>
+		true
+	</td>
+	<td>
+		false
+	</td>
+	<td>
+		false
+	</td>
+</tr>
+<tr>
+	<td>configuration.buttonTextString</td>
+	<td>Non Default Text String</td>
+	<td>
+		true
+	</td>
+	<td>
+		false
+	</td>
+	<td>
+		false
+	</td>
+</tr>
+<tr>
+	<td>configuration.buttonTextInt</td>
+	<td>2</td>
+	<td>
+		false
+	</td>
+	<td>
+		true
+	</td>
+	<td>
+		false
+	</td>
+</tr>
+<tr>
+	<td>configuration.buttonTextDouble</td>
+	<td>2.2</td>
+	<td>
+		false
+	</td>
+	<td>
+		true
+	</td>
+	<td>
+		false
+	</td>
+</tr>
 </tbody></table>
 
 </div>
