LPS-99163 Adapt testProcessFragmentEntryLinkHTMLWithConfiguration to verify colorPalette fields are processed correctly

--- a/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-freemarker-test/src/testIntegration/resources/com/liferay/fragment/entry/processor/freemarker/test/dependencies/fragment_entry_with_configuration.html
+++ b/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-freemarker-test/src/testIntegration/resources/com/liferay/fragment/entry/processor/freemarker/test/dependencies/fragment_entry_with_configuration.html
@@ -291,6 +291,106 @@ This is editable text
 	  [/#if]
 	</td>
 </tr>
+<tr>
+	<td>configuration.backgroundColor.cssClass</td>
+	<td>${configuration.backgroundColor.cssClass}</td>
+	<td>
+	  [#if configuration.backgroundColor.cssClass?is_string]
+		true
+	  [#else]
+		false
+	  [/#if]
+	</td>
+	<td>
+	  [#if configuration.backgroundColor.cssClass?is_number]
+		true
+	  [#else]
+		false
+	  [/#if]
+	</td>
+	<td>
+	  [#if configuration.backgroundColor.cssClass?is_boolean]
+		true
+	  [#else]
+		false
+	  [/#if]
+	</td>
+</tr>
+<tr>
+	<td>configuration.backgroundColor.rgbValue</td>
+	<td>${configuration.backgroundColor.rgbValue}</td>
+	<td>
+	  [#if configuration.backgroundColor.rgbValue?is_string]
+		true
+	  [#else]
+		false
+	  [/#if]
+	</td>
+	<td>
+	  [#if configuration.backgroundColor.rgbValue?is_number]
+		true
+	  [#else]
+		false
+	  [/#if]
+	</td>
+	<td>
+	  [#if configuration.backgroundColor.rgbValue?is_boolean]
+		true
+	  [#else]
+		false
+	  [/#if]
+	</td>
+</tr>
+<tr>
+	<td>configuration.textColor.cssClass</td>
+	<td>${configuration.textColor.cssClass}</td>
+	<td>
+	  [#if configuration.textColor.cssClass?is_string]
+		true
+	  [#else]
+		false
+	  [/#if]
+	</td>
+	<td>
+	  [#if configuration.textColor.cssClass?is_number]
+		true
+	  [#else]
+		false
+	  [/#if]
+	</td>
+	<td>
+	  [#if configuration.textColor.cssClass?is_boolean]
+		true
+	  [#else]
+		false
+	  [/#if]
+	</td>
+</tr>
+<tr>
+	<td>configuration.textColor.rgbValue</td>
+	<td>${configuration.textColor.rgbValue}</td>
+	<td>
+	  [#if configuration.textColor.rgbValue?is_string]
+		true
+	  [#else]
+		false
+	  [/#if]
+	</td>
+	<td>
+	  [#if configuration.textColor.rgbValue?is_number]
+		true
+	  [#else]
+		false
+	  [/#if]
+	</td>
+	<td>
+	  [#if configuration.textColor.rgbValue?is_boolean]
+		true
+	  [#else]
+		false
+	  [/#if]
+	</td>
+</tr>
 </table>
 
 </div>
