--- a/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-freemarker-test/src/testIntegration/resources/com/liferay/fragment/entry/processor/freemarker/test/dependencies/expected_processed_fragment_entry_with_configuration.html
+++ b/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-freemarker-test/src/testIntegration/resources/com/liferay/fragment/entry/processor/freemarker/test/dependencies/expected_processed_fragment_entry_with_configuration.html
@@ -157,6 +157,58 @@ This is editable text
 		false
 	</td>
 </tr>
+<tr>
+	<td>configuration.backgroundColor.cssClass</td>
+	<td>dark</td>
+	<td>
+		true
+	</td>
+	<td>
+		false
+	</td>
+	<td>
+		false
+	</td>
+</tr>
+<tr>
+	<td>configuration.backgroundColor.rgbValue</td>
+	<td>rgb(255, 255, 255)</td>
+	<td>
+		true
+	</td>
+	<td>
+		false
+	</td>
+	<td>
+		false
+	</td>
+</tr>
+<tr>
+	<td>configuration.textColor.cssClass</td>
+	<td></td>
+	<td>
+		true
+	</td>
+	<td>
+		false
+	</td>
+	<td>
+		false
+	</td>
+</tr>
+<tr>
+	<td>configuration.textColor.rgbValue</td>
+	<td></td>
+	<td>
+		true
+	</td>
+	<td>
+		false
+	</td>
+	<td>
+		false
+	</td>
+</tr>
 </tbody></table>
 
 </div>
