LPS-99163 Adapt testProcessFragmentEntryLinkHTMLWithConfigurationNondefaultSegmentId to verify colorPalette fields are processed correctly

--- a/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-freemarker-test/src/testIntegration/resources/com/liferay/fragment/entry/processor/freemarker/test/dependencies/expected_processed_fragment_entry_with_configuration_nondefault_segment_id.html
+++ b/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-freemarker-test/src/testIntegration/resources/com/liferay/fragment/entry/processor/freemarker/test/dependencies/expected_processed_fragment_entry_with_configuration_nondefault_segment_id.html
@@ -157,6 +157,58 @@ This is editable text
 		false
 	</td>
 </tr>
+<tr>
+	<td>configuration.backgroundColor.cssClass</td>
+	<td>light</td>
+	<td>
+		true
+	</td>
+	<td>
+		false
+	</td>
+	<td>
+		false
+	</td>
+</tr>
+<tr>
+	<td>configuration.backgroundColor.rgbValue</td>
+	<td>rgb(0, 0, 0)</td>
+	<td>
+		true
+	</td>
+	<td>
+		false
+	</td>
+	<td>
+		false
+	</td>
+</tr>
+<tr>
+	<td>configuration.textColor.cssClass</td>
+	<td></td>
+	<td>
+		true
+	</td>
+	<td>
+		false
+	</td>
+	<td>
+		false
+	</td>
+</tr>
+<tr>
+	<td>configuration.textColor.rgbValue</td>
+	<td></td>
+	<td>
+		true
+	</td>
+	<td>
+		false
+	</td>
+	<td>
+		false
+	</td>
+</tr>
 </tbody></table>
 
 </div>
