--- a/modules/apps/frontend-css/frontend-css-variables-web/src/test/resources/com/liferay/frontend/css/variables/web/internal/servlet/taglib/liferay_css_variables_1.html
+++ b/modules/apps/frontend-css/frontend-css-variables-web/src/test/resources/com/liferay/frontend/css/variables/web/internal/servlet/taglib/liferay_css_variables_1.html
@@ -1,4 +1,4 @@
-<style data-senna-track="temporary" id="liferayCssVariablesCSS" type="text/css">
+<style data-senna-track="temporary" type="text/css">
 :root {
 --color: red;
 }
